--- a/package.json
+++ b/package.json
@@ -58,10 +58,12 @@
     "next-themes": "^0.3.0",
     "postcss": "8.4.30",
     "qrcode": "^1.5.4",
+    "qrcode.react": "^4.2.0",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
+    "react-qr-code": "^2.0.18",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
